# pr_review_agent

./: .gitignore  DESIGN.md  README.md  config.toml.example  pyproject.toml
.github/workflows/: ci.yml
datasets/pandas/: cases.jsonl
datasets/pandas/runs/: gemini.jsonl
src/pr_review_agent/: __init__.py  cli.py  config.py  estimate.py  jsonutil.py  retrieval.py  workspace.py
src/pr_review_agent/context/: __init__.py  imports.py  models.py  resolve.py  retriever.py
src/pr_review_agent/diff/: __init__.py  models.py  parser.py
src/pr_review_agent/evals/: __init__.py  dataset.py  judge.py  report.py  retrieval_metrics.py  retrieval_run.py  run.py  schema.py
src/pr_review_agent/github/: __init__.py  client.py  models.py
src/pr_review_agent/models/: __init__.py  anthropic_client.py  base.py  cerebras.py  claude_code.py  factory.py  gemini.py  ollama.py  retry.py  store.py
tests/: conftest.py  test_cerebras_client.py  test_claude_code_client.py  test_cli.py  test_cli_context.py  test_cli_cost.py  test_cli_eval.py  test_cli_review.py  test_config.py  test_context_imports.py  test_context_resolve.py  test_context_retriever.py  test_diff_parser.py  test_eval_dataset.py  test_eval_judge.py  test_eval_report.py  test_eval_run.py  test_github_client.py  test_model_clients.py  test_model_store.py  test_rag_chunker.py  test_rag_index.py  test_rag_retriever.py  test_rag_store.py  test_rag_walk.py  test_retrieval.py  test_retrieval_metrics.py  test_retrieval_run.py  test_retry.py  test_review_engine.py  test_review_lint.py  test_review_post.py  test_workspace.py
(+34 files in other folders)
