[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-review-agent"
version = "0.1.0"
description = "Autonomous GitHub PR review agent with an eval harness"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jaskirat Singh" }]
dependencies = [
    "anthropic>=0.45",
    "google-genai>=1.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.2",
    "ruff>=0.6",
]

[project.scripts]
pra = "pr_review_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_review_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "A",   # builtin shadowing
    "C4",  # comprehensions
    "SIM", # simplify
    "RET", # return statements
    "PTH", # pathlib
    "RUF", # ruff-specific
]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "tests"]
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
